--- a/examples/explodata/adaptive_exploring.ipynb
+++ b/examples/explodata/adaptive_exploring.ipynb
@@ -13,233 +13,12 @@
       "✅ Loaded reasoning engine config from: /storage/Projects/mcpweaver_project/mcpweaver/configs/reasoning_config.yaml\n",
       "🧠 Reasoning about query: Calculate the mean and std of [1, 2, 3, 4, 5]\n",
       "🔧 Injected context from prompt generator\n",
-      "🔧 Using JSON schema enforcement with format parameter\n",
-      "🔧 Schema: {\n",
-      "  \"type\": \"object\",\n",
-      "  \"properties\": {\n",
-      "    \"actions\": {\n",
-      "      \"type\": \"array\",\n",
-      "      \"items\": {\n",
-      "        \"type\": \"object\",\n",
-      "        \"properties\": {\n",
-      "          \"tool\": {\n",
-      "            \"type\": \"string\",\n",
-      "            \"description\": \"Name of the tool to execute\",\n",
-      "            \"enum\": [\n",
-      "              \"prompt_generator\",\n",
-      "              \"np_mean\",\n",
-      "              \"np_std\",\n",
-      "              \"np_sum\",\n",
-      "              \"torch_tensor\",\n",
-      "              \"torch_mean\"\n",
-      "            ]\n",
-      "          },\n",
-      "          \"arguments\": {\n",
-      "            \"type\": \"object\",\n",
-      "            \"description\": \"Arguments for this tool\",\n",
-      "            \"properties\": {\n",
-      "              \"prompt_generator\": {\n",
-      "                \"type\": \"object\",\n",
-      "                \"properties\": {\n",
-      "                  \"tools\": {\n",
-      "                    \"type\": \"string\",\n",
-      "                    \"description\": \"List of available tools\"\n",
-      "                  },\n",
-      "                  \"config_path\": {\n",
-      "                    \"type\": \"string\",\n",
-      "                    \"description\": \"Path to server config file\"\n",
-      "                  }\n",
-      "                },\n",
-      "                \"required\": [\n",
-      "                  \"tools\",\n",
-      "                  \"config_path\"\n",
-      "                ]\n",
-      "              },\n",
-      "              \"np_mean\": {\n",
-      "                \"type\": \"object\",\n",
-      "                \"properties\": {\n",
-      "                  \"a\": {\n",
-      "                    \"type\": \"string\",\n",
-      "                    \"description\": \"Parameter a\"\n",
-      "                  },\n",
-      "                  \"axis\": {\n",
-      "                    \"type\": \"string\",\n",
-      "                    \"description\": \"Parameter axis\"\n",
-      "                  },\n",
-      "                  \"dtype\": {\n",
-      "                    \"type\": \"string\",\n",
-      "                    \"description\": \"Parameter dtype\"\n",
-      "                  },\n",
-      "                  \"out\": {\n",
-      "                    \"type\": \"string\",\n",
-      "                    \"description\": \"Parameter out\"\n",
-      "                  },\n",
-      "                  \"keepdims\": {\n",
-      "                    \"type\": \"string\",\n",
-      "                    \"description\": \"Parameter keepdims\"\n",
-      "                  },\n",
-      "                  \"where\": {\n",
-      "                    \"type\": \"string\",\n",
-      "                    \"description\": \"Parameter where\"\n",
-      "                  }\n",
-      "                },\n",
-      "                \"required\": [\n",
-      "                  \"a\"\n",
-      "                ]\n",
-      "              },\n",
-      "              \"np_std\": {\n",
-      "                \"type\": \"object\",\n",
-      "                \"properties\": {\n",
-      "                  \"a\": {\n",
-      "                    \"type\": \"string\",\n",
-      "                    \"description\": \"Parameter a\"\n",
-      "                  },\n",
-      "                  \"axis\": {\n",
-      "                    \"type\": \"string\",\n",
-      "                    \"description\": \"Parameter axis\"\n",
-      "                  },\n",
-      "                  \"dtype\": {\n",
-      "                    \"type\": \"string\",\n",
-      "                    \"description\": \"Parameter dtype\"\n",
-      "                  },\n",
-      "                  \"out\": {\n",
-      "                    \"type\": \"string\",\n",
-      "                    \"description\": \"Parameter out\"\n",
-      "                  },\n",
-      "                  \"ddof\": {\n",
-      "                    \"type\": \"string\",\n",
-      "                    \"description\": \"Parameter ddof\"\n",
-      "                  },\n",
-      "                  \"keepdims\": {\n",
-      "                    \"type\": \"string\",\n",
-      "                    \"description\": \"Parameter keepdims\"\n",
-      "                  },\n",
-      "                  \"where\": {\n",
-      "                    \"type\": \"string\",\n",
-      "                    \"description\": \"Parameter where\"\n",
-      "                  }\n",
-      "                },\n",
-      "                \"required\": [\n",
-      "                  \"a\"\n",
-      "                ]\n",
-      "              },\n",
-      "              \"np_sum\": {\n",
-      "                \"type\": \"object\",\n",
-      "                \"properties\": {\n",
-      "                  \"a\": {\n",
-      "                    \"type\": \"string\",\n",
-      "                    \"description\": \"Parameter a\"\n",
-      "                  },\n",
-      "                  \"axis\": {\n",
-      "                    \"type\": \"string\",\n",
-      "                    \"description\": \"Parameter axis\"\n",
-      "                  },\n",
-      "                  \"dtype\": {\n",
-      "                    \"type\": \"string\",\n",
-      "                    \"description\": \"Parameter dtype\"\n",
-      "                  },\n",
-      "                  \"out\": {\n",
-      "                    \"type\": \"string\",\n",
-      "                    \"description\": \"Parameter out\"\n",
-      "                  },\n",
-      "                  \"keepdims\": {\n",
-      "                    \"type\": \"string\",\n",
-      "                    \"description\": \"Parameter keepdims\"\n",
-      "                  },\n",
-      "                  \"initial\": {\n",
-      "                    \"type\": \"string\",\n",
-      "                    \"description\": \"Parameter initial\"\n",
-      "                  },\n",
-      "                  \"where\": {\n",
-      "                    \"type\": \"string\",\n",
-      "                    \"description\": \"Parameter where\"\n",
-      "                  }\n",
-      "                },\n",
-      "                \"required\": [\n",
-      "                  \"a\"\n",
-      "                ]\n",
-      "              },\n",
-      "              \"torch_tensor\": {\n",
-      "                \"type\": \"object\",\n",
-      "                \"properties\": {}\n",
-      "              },\n",
-      "              \"torch_mean\": {\n",
-      "                \"type\": \"object\",\n",
-      "                \"properties\": {}\n",
-      "              }\n",
-      "            }\n",
-      "          }\n",
-      "        },\n",
-      "        \"required\": [\n",
-      "          \"tool\",\n",
-      "          \"arguments\"\n",
-      "        ]\n",
-      "      },\n",
-      "      \"description\": \"Linear sequence of actions to execute\",\n",
-      "      \"minItems\": 1\n",
-      "    },\n",
-      "    \"reasoning\": {\n",
-      "      \"type\": \"string\",\n",
-      "      \"description\": \"Explanation of the action plan choices\"\n",
-      "    },\n",
-      "    \"confidence\": {\n",
-      "      \"type\": \"number\",\n",
-      "      \"description\": \"Confidence level in the action plan\",\n",
-      "      \"minimum\": 0.0,\n",
-      "      \"maximum\": 1.0\n",
-      "    }\n",
-      "  },\n",
-      "  \"required\": [\n",
-      "    \"actions\",\n",
-      "    \"reasoning\",\n",
-      "    \"confidence\"\n",
-      "  ]\n",
-      "}\n",
-      "🤖 Calling LLM (ollama:phi3:mini) for reasoning...\n",
-      "🤖 LLM Reasoning Response: {\n",
-      "    \"action\": {\n",
-      "        \"tool\": \"np_mean\",\n",
-      "        \"args\": {\"a\": [[1, 2, 3, 4, 5]]}\n",
-      "    },\n",
-      "    \"next_action\": {\n",
-      "        \"tool\": \"np_std\",\n",
-      "        \"args\": {\"a\": [[1, 2, 3, 4, 5]]}\n",
-      "    }\n",
-      "}\n",
-      "🔧 Raw response type: <class 'str'>\n",
-      "🔧 Response length: 188\n",
-      "🔧 Parsed JSON: {\n",
-      "  \"action\": {\n",
-      "    \"tool\": \"np_mean\",\n",
-      "    \"args\": {\n",
-      "      \"a\": [\n",
-      "        [\n",
-      "          1,\n",
-      "          2,\n",
-      "          3,\n",
-      "          4,\n",
-      "          5\n",
-      "        ]\n",
-      "      ]\n",
-      "    }\n",
-      "  },\n",
-      "  \"next_action\": {\n",
-      "    \"tool\": \"np_std\",\n",
-      "    \"args\": {\n",
-      "      \"a\": [\n",
-      "        [\n",
-      "          1,\n",
-      "          2,\n",
-      "          3,\n",
-      "          4,\n",
-      "          5\n",
-      "        ]\n",
-      "      ]\n",
-      "    }\n",
-      "  }\n",
-      "}\n",
-      "✅ Action Plan: {'actions': [], 'reasoning': '', 'confidence': 0.8}\n",
-      "Plan: {'actions': [], 'reasoning': '', 'confidence': 0.8}\n"
+      "🔧 JSON support test failed: HTTPConnectionPool(host='localhost', port=11434): Read timed out. (read timeout=10)\n",
+      "🔧 Model gpt-oss:20b JSON support: False\n",
+      "⚠️ No JSON schema available\n",
+      "🤖 Calling LLM (ollama:gpt-oss:20b) for reasoning...\n",
+      "❌ Error calling LLM: HTTPConnectionPool(host='localhost', port=11434): Read timed out. (read timeout=10)\n",
+      "Plan: {'plan': [], 'confidence': 0.0, 'error': \"Error calling LLM: HTTPConnectionPool(host='localhost', port=11434): Read timed out. (read timeout=10)\"}\n"
      ]
     }
    ],
